# API-Python

API-dio-bank/: .gitignore  pyproject.toml
API-dio-bank/instance/: blog.sqlite
API-dio-bank/src/: app.py  config.py  utils.py  wsgi.py
API-dio-bank/src/controllers/: auth.py  post.py  role.py  user.py
API-dio-bank/src/models/: __init__.py  post.py  role.py  user.py
API-dio-bank/src/tests/integration/: conftest.py
API-dio-bank/src/tests/integration/controllers/: test_user.py
API-dio-bank/src/tests/unit/: test_utils.py
API-dio-bank/src/views/: role.py  user.py
Banco de Dados/: clientes.db  dbapi.py  transação.py
