[project]
name = "api-dio-bank"
version = "0.1.0"
description = ""
authors = [
    {name = "Oportugall",email = "lemgruberportugalleonardo@gmail.com"}
]
requires-python = ">=3.14,<4.0.0"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "flask-migrate",
    "flask-jwt-extended (>=4.7.4,<5.0.0)",
    "psycopg2-binary",
    "gunicorn"
]

[tool.pytest.ini_options]
addopts = "-ra -vvv"
pythonpath = ["."]
testpaths = ["src/tests"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest",
    "pytest-mock"
]
